--- a/index.html
+++ b/index.html
@@ -6,24 +6,18 @@
 </head>
 <body ng-app="blogApp">
 
-  <h1 ng-controller="title">{{insertTitle.title}}</h1>
+    <header>
+      <h1 ng-controller="title">{{insertTitle.title}}</h1>
+    </header>
 
-  <div class="blogPosts" ng-controller="BlogPosts">
-    <div class="posts" ng-repeat = 'post in posts'>
-      <h2>{{post.title}}</h2>
-      <img src={{post.image}}>
-      <p>{{post.exc}}</p>
-      <a class="ReadMore" ng-click="showDetails = ! showDetails">READ MORE</a>
-      <div ng-show="showDetails">
-        {{post.body}}
-      </div>
+<div ng-view></div>
 
-      <p>{{post.author}}</p>
-      <p>{{post.createdOn}}</p>
-    </div>
-  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-sanitize.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
   <script src="app.js"></script>
 </body>
 </html>
